# metagame

./: .gitignore  configure.ac
src/: Makefile.am  metagame.c  metagame.h  types.c  types.h  util.c  util.h
src/parsers/: genesis.c  genesis.h  nes.c  nes.h  snes.c  snes.h
tests/: Makefile.am  test_metagame.h  test_types.h  test_util.h  testrunner.c
