lib_LTLIBRARIES = libmetagame.la
libmetagame_la_SOURCES = types.h types.c util.h util.c metagame.h metagame.c parsers/nes.h parsers/nes.c parsers/snes.h parsers/snes.c parsers/genesis.h parsers/genesis.c
libmetagame_la_LDFLAGS = -version-info 0:0:0

libmetagame_includedir=$(includedir)/metagame
libmetagame_include_HEADERS = metagame.h types.h